<resources>
    <string name="app_name">Rpm-meres</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="welcome_text_upper">Az alkalmazás segítségével körfrekvenciát tudsz mérni. Az alábbiakban pár használati utasítás és tipp található</string>
    <string name="instruction_text_0">\n Tipp 0. \n A szenzor működését meg tudod vizsgálni a Szenzor teszt menüt felhasználva.</string>
    <string name="instruction_text_1">\n Tipp 1. \n A legoptimálisabb mérést úgy érheted el ha a szenzor egy fél kört közel, és egy fél kört távolnak lát</string>
    <string name="instruction_text_2">\n Tipp 2. \n Nyomtass ki papírból egy kört aminek fele fehér és fele fekete, és ragaszd a tárgyra. \n Helyezd a szenzort akkora távolságra, hogy a fehér részt érzékelje de a feketét ne.</string>
    <string name="instruction_text_3">\n Tipp 3. \n Amennyiben a szenzort a legtávolabb akarod tenni a tárgytól ragassz rá alufóliát</string>
    <string name="open_measure">Mérés</string>
    <string name="open_settings">Beállítások</string>
    <string name="open_info">Info</string>
    <string name="header_title">Rpm mérés</string>
    <string name="header_email">balintnandor@gmail.com</string>
    <string name="range_test">Szenzor teszt</string>
    <string name="range_instruction">Amennyiben a szenzor elég közel van a tárgzhoz a telefon vibrálni kezd és a kijelző színe zöldre fog váltani. Ha nem akkor piros marad. \nNe felejtsd el megallitani a szenzort!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
