<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.balintnandor.rpm_meres.MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:text="@string/welcome_text_upper" />

    <TextView
        android:id="@+id/instruction_text_0"
        android:layout_below="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/instruction_text_0" />
    <TextView
        android:id="@+id/instruction_text_1"
        android:layout_below="@+id/instruction_text_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/instruction_text_1" />
    <TextView
        android:id="@+id/instruction_text_2"
        android:layout_below="@+id/instruction_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/instruction_text_2" />
    <TextView
        android:id="@+id/instruction_text_3"
        android:layout_below="@+id/instruction_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/instruction_text_3" />
</RelativeLayout>